# SFRSA

./: .gitignore  LICENSE  README.md  example_data.csv  example_data_step0_training.csv  pyproject.toml
src/sfrsa/: __init__.py  embeddings.py  generation.py  selection.py  utility.py
tests/: test_generation.py  test_selection.py  test_utility.py
