[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfrsa"
version = "0.1.1"
description = "Selective Few-Random-Shot Augmentation for text data augmentation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SFRSA authors" }
]
keywords = ["text-augmentation", "imbalanced-learning", "dpp", "few-shot", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=7", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/LingshuHu/SFRSA"
Repository = "https://github.com/LingshuHu/SFRSA"
Issues = "https://github.com/LingshuHu/SFRSA/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
